[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools]
name = "path-easing"
version = "0.1.0"
description = "A utility to parse gcodes and apply various modifications to the starts and ends of each non-travel path"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
author = "Tristan Ryer-Parke"
url = "https://github.com/tristanryerparke/path-easing"
packages = ["path_easing"]
install_requires = ["typer", "numpy", "rich", "gcodeparser"]
entry_points = [
    "console_scripts = ['path-easing = path_easing.path_easing:main']"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
python_requires = ">=3.6"
